--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
     <script>
       window.$docsify = {
         // 项目名称
-        name: "XJTUSE-GUIDE",
+        name: "TESTPROJECT",
         nameLink: "#/README",
-        // 仓库地址，点击右上角的Github章鱼猫头像会跳转到此地址
+        // 仓库地址
         repo: "https://github.com/L-M-S-F-X-S/L-M-S-F-X-S.github.io",
         // 侧边栏支持，默认加载的是项目根目录下的_sidebar.md文件
         loadSidebar: true,
@@ -67,7 +67,7 @@
           noData: "找不到结果",
           depth: 4,
           hideOtherSidebarContent: false,
-          namespace: "Xjtuse-Guide",
+          namespace: "TESTPROJECT",
         },
         latex: {
           inlineMath: [
@@ -94,8 +94,6 @@
           formatUpdated: "{YYYY}/{MM}/{DD} {HH}:{mm}",
           whereToPlace: "top", // "top" or "bottom", default to "bottom"
         },
-        // todo
-        // plugins: [EditOnGithubPlugin.create('https://github.com/Snailclimb/JavaGuide-Interview/blob/master/')],
       };
     </script>
     <!-- docsify的js依赖 -->
