--- a/index.html
+++ b/index.html
@@ -5,18 +5,12 @@
     <title>TESTPROJECT</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="description" content="Description" />
-    <meta
-      name="viewport"
-      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
-    />
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"/>
     <!-- 设置浏览器图标 -->
     <link rel="icon" href="./favicon.ico" type="image/x-icon" />
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
     <!-- 默认主题 -->
-    <link
-      rel="stylesheet"
-      href="//cdn.jsdelivr.net/npm/docsify/lib/themes/vue.css"
-    />
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify/lib/themes/dark.css"/>
   </head>
 
   <body>
@@ -46,13 +40,7 @@
         mergeNavbar: true,
         // 显示文档更新日期
         formatUpdated: "{MM}/{DD} {HH}:{mm}",
-        // routerMode: "history",
-        // // 跨链图片
-        // crossOriginLinks: [
-        //   "https://gitee.com/yi-junquan/image_gitee/raw/master/images/",
-        //   "http://cdn.hydrion-qlz.top/gitee/",
-        // ],
-        /*搜索相关设置*/
+        // 搜索相关设置
         search: {
           maxAge: 86400000, // 过期时间，单位毫秒，默认一天
           paths: "auto", // 注意：仅适用于 paths: 'auto' 模式
