--- a/index.html
+++ b/index.html
@@ -14,8 +14,6 @@
   </head>
 
   <body>
-    <!-- 定义加载时候的动作 -->
-    <div id="app">Waiting...</div>
     <script>
       window.$docsify = {
         // 项目名称
@@ -38,6 +36,8 @@
         subMaxLevel: 2,
         // 小屏设备下合并导航栏到侧边栏
         mergeNavbar: true,
+        // 显示文档更新日期
+        formatUpdated: "{MM}/{DD} {HH}:{mm}",
         // 搜索相关设置
         search: {
           maxAge: 86400000, // 过期时间，单位毫秒，默认一天
@@ -103,6 +103,8 @@
     <script src="//unpkg.com/docsify-pagination/dist/docsify-pagination.min.js"></script>
     <!--统计访问量插件-->
     <script src="https://unpkg.com/docsify-busuanzi@1.0.1/dist/docsify-busuanzi.min.js"></script>
+    <!--  页面更新时间  -->
+    <script src="https://cdn.jsdelivr.net/npm/docsify-updated/src/time-updater.min.js"></script>
     <!--支持 mermaid 图表-->
     <script type="module">
       import mermaid from "https://cdn.jsdelivr.net/npm/mermaid@10/dist/mermaid.esm.min.mjs";
