--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
   </head>
 
   <body>
+    <!-- 定义加载时候的动作 -->
+    <div id="app">Loading...</div>
     <script>
       window.$docsify = {
         // 项目名称
