--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <body>
     <!-- 定义加载时候的动作 -->
-    <div id="app">Loading...</div>
+    <div id="app">Waiting...</div>
     <script>
       window.$docsify = {
         // 项目名称
