--- a/index.html
+++ b/index.html
@@ -114,5 +114,6 @@
       window.mermaid = mermaid;
     </script>
     <script src="//unpkg.com/docsify-mermaid@2.0.1/dist/docsify-mermaid.js"></script>
+  <script>已有??人访问 总访问量???次</script>
   </body>
 </html>
