--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
         },
       };
     </script>
+    <script>已有??人访问 总访问量???次</script>
     <!-- docsify的js依赖 -->
     <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
     <!-- 图片缩放 -->
