--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>TESTPROJECT</title>
+    <title>资料分享</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="description" content="Description" />
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"/>
@@ -19,7 +19,7 @@
     <script>
       window.$docsify = {
         // 项目名称
-        name: "TESTPROJECT",
+        name: "资料分享",
         nameLink: "#/README",
         // 仓库地址
         repo: "https://github.com/L-M-S-F-X-S/L-M-S-F-X-S.github.io",
@@ -53,7 +53,7 @@
           noData: "找不到结果",
           depth: 4,
           hideOtherSidebarContent: false,
-          namespace: "TESTPROJECT",
+          namespace: "资料分享",
         },
         latex: {
           inlineMath: [
