--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
         repo: "https://github.com/L-M-S-F-X-S/L-M-S-F-X-S.github.io",
         // 侧边栏支持，默认加载的是项目根目录下的_sidebar.md文件
         loadSidebar: true,
-        // 导航栏支持，默认加载的是项目根目录下的_navbar.md文件
-        loadNavbar: true,
-        topMargin: 90,
+<!--        // 导航栏支持，默认加载的是项目根目录下的_navbar.md文件-->
+<!--        loadNavbar: true,-->
+<!--        topMargin: 90,-->
         // 只在访问主页时加载封面。
         onlyCover: true,
         //切换页面后是否自动跳转到页面顶部
@@ -35,26 +35,26 @@
         // 最大支持渲染的标题层级
         maxLevel: 5,
         // 自定义侧边栏后默认不会再生成目录，设置生成目录的最大层级（建议配置为2-4）
-        subMaxLevel: 2,
-        // 小屏设备下合并导航栏到侧边栏
-        mergeNavbar: true,
-        // 显示文档更新日期
-        formatUpdated: "{MM}/{DD} {HH}:{mm}",
-        // 搜索相关设置
-        search: {
-          maxAge: 86400000, // 过期时间，单位毫秒，默认一天
-          paths: "auto", // 注意：仅适用于 paths: 'auto' 模式
-          placeholder: "搜索",
-          // 支持本地化
-          placeholder: {
-            "/zh-cn/": "搜索",
-            "/": "Type to search",
-          },
-          noData: "找不到结果",
-          depth: 4,
-          hideOtherSidebarContent: false,
-          namespace: "资料分享",
-        },
+        subMaxLevel: 3,
+<!--        // 小屏设备下合并导航栏到侧边栏-->
+<!--        mergeNavbar: true,-->
+<!--        // 显示文档更新日期-->
+<!--        formatUpdated: "{MM}/{DD} {HH}:{mm}",-->
+<!--        // 搜索相关设置-->
+<!--        search: {-->
+<!--          maxAge: 86400000, // 过期时间，单位毫秒，默认一天-->
+<!--          paths: "auto", // 注意：仅适用于 paths: 'auto' 模式-->
+<!--          placeholder: "搜索",-->
+<!--          // 支持本地化-->
+<!--          placeholder: {-->
+<!--            "/zh-cn/": "搜索",-->
+<!--            "/": "Type to search",-->
+<!--          },-->
+<!--          noData: "找不到结果",-->
+<!--          depth: 4,-->
+<!--          hideOtherSidebarContent: false,-->
+<!--          namespace: "资料分享",-->
+<!--        },-->
         latex: {
           inlineMath: [
             ["$", "$"],
@@ -64,8 +64,8 @@
         },
         // 分页
         pagination: {
-          previousText: "上一章",
-          nextText: "下一章",
+          previousText: "Previous Page",
+          nextText: "Next Page",
         },
         // 网站访问量
         busuanzi: true,
