--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="description" content="Description" />
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"/>
     <!-- 设置浏览器图标 -->
-    <link rel="icon" href="./favicon.ico" type="image/x-icon" />
-    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="./photo.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="./photo.ico" type="image/x-icon" />
     <!-- 默认主题 -->
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify/lib/themes/pure.css"/>
   </head>
@@ -25,9 +25,6 @@
         repo: "https://github.com/L-M-S-F-X-S/L-M-S-F-X-S.github.io",
         // 侧边栏支持，默认加载的是项目根目录下的_sidebar.md文件
         loadSidebar: true,
-        // 导航栏支持，默认加载的是项目根目录下的_navbar.md文件
-        loadNavbar: false,
-        topMargin: 90,
         // 只在访问主页时加载封面。
         onlyCover: true,
         //切换页面后是否自动跳转到页面顶部
@@ -38,23 +35,6 @@
         subMaxLevel: 3,
         // 小屏设备下合并导航栏到侧边栏
         mergeNavbar: true,
-<!--        // 显示文档更新日期-->
-<!--        formatUpdated: "{MM}/{DD} {HH}:{mm}",-->
-<!--        // 搜索相关设置-->
-<!--        search: {-->
-<!--          maxAge: 86400000, // 过期时间，单位毫秒，默认一天-->
-<!--          paths: "auto", // 注意：仅适用于 paths: 'auto' 模式-->
-<!--          placeholder: "搜索",-->
-<!--          // 支持本地化-->
-<!--          placeholder: {-->
-<!--            "/zh-cn/": "搜索",-->
-<!--            "/": "Type to search",-->
-<!--          },-->
-<!--          noData: "找不到结果",-->
-<!--          depth: 4,-->
-<!--          hideOtherSidebarContent: false,-->
-<!--          namespace: "资料分享",-->
-<!--        },-->
         latex: {
           inlineMath: [
             ["$", "$"],
@@ -80,11 +60,6 @@
     <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
     <!-- 图片缩放 -->
     <script src="//unpkg.com/docsify/lib/plugins/zoom-image.js"></script>
-<!--    &lt;!&ndash; 字数统计 &ndash;&gt;-->
-<!--    <script src="//unpkg.com/docsify-count/dist/countable.js"></script>-->
-<!--    &lt;!&ndash; 搜索功能支持 &ndash;&gt;-->
-<!--    <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script>-->
-    <!--在所有的代码块上添加一个简单的Click to copy按钮来允许用户从你的文档中轻易地复制代码-->
     <script src="//cdn.jsdelivr.net/npm/docsify-copy-code/dist/docsify-copy-code.min.js"></script>
     <!--代码高亮-->
     <script src="//unpkg.com/prismjs/components/prism-java.js"></script>
@@ -105,8 +80,6 @@
     <script src="//unpkg.com/docsify-pagination/dist/docsify-pagination.min.js"></script>
     <!--统计访问量插件-->
     <script src="https://unpkg.com/docsify-busuanzi@1.0.1/dist/docsify-busuanzi.min.js"></script>
-<!--    &lt;!&ndash;  页面更新时间  &ndash;&gt;-->
-<!--    <script src="https://cdn.jsdelivr.net/npm/docsify-updated/src/time-updater.min.js"></script>-->
     <!--支持 mermaid 图表-->
     <script type="module">
       import mermaid from "https://cdn.jsdelivr.net/npm/mermaid@10/dist/mermaid.esm.min.mjs";
