--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <script>
       window.$docsify = {
         // 项目名称
-        name: "资料分享",
+        name: "<span style='font-size: 2.5em;'>资料分享</span>",
         nameLink: "#/README",
         // 仓库地址
         repo: "https://github.com/L-M-S-F-X-S/L-M-S-F-X-S.github.io",
